--- a/GoogleAnalytics/.project
+++ b/GoogleAnalytics/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>000-GoogleAnalyticsRobovmBindings</name>
+	<name>GoogleAnalytics</name>
 	<comment></comment>
 	<projects>
 	</projects>
