Added CoreLocation bindings

--- a/GoogleAnalytics/robovm.properties
+++ b/GoogleAnalytics/robovm.properties
@@ -1,6 +1,6 @@
 app.version=1.0
-app.id=com.applift.robovmbindings
-app.mainclass=com.applift.robovmbindings.PlayAdsSDK
-app.executable=Applift
+app.id=com.googleanalytics.robovmbindings
+app.mainclass=com.googleanalytics.robovmbindings;
+app.executable=Googleanalytics
 app.build=1
-app.name=Applift
+app.name=Googleanalytics
